tests/error/modifier_errors/flag_control_qubit2.err
Error: Control constraint violation (at $FILE:12:8)
   | 
10 | @guppy(control=True)
11 | def test() -> None:
12 |     p = init_qubits()
   |         ^^^^^^^^^^^^^ This function cannot be called in a control context

Note: The function allocates qubits, which is not allowed in a control context

Guppy compilation failed due to 1 previous error
